# forecastle

./: .gitattributes  .gitignore  README.md  STATUS.md  pyproject.toml
configs/: downloads.yaml  example.yaml
configs/batches/: markets_matched_origins_direct_h20.yaml  markets_matched_origins_recursive_h20.yaml  markets_matched_origins_rolling_direct_h20.yaml
configs/comparisons/: direct_vs_recursive_h20.yaml  rolling_vs_expanding_direct_h20.yaml  rolling_vs_expanding_recursive_h20.yaml
configs/datasets/: bist100.yaml  sp500.yaml  wig20.yaml
configs/evaluation/: g7_walk_forward_h20_base.yaml  wig20_rolling_recursive.yaml  wig20_walk_forward_recursive.yaml  wig20_walk_forward_recursive_smoke.yaml
configs/studies/: dnfs_flatten_first_order.yaml  dnfs_gru_first_order.yaml  dnfs_gru_first_order_usage_1e3.yaml  dnfs_gru_first_order_usage_1e3_rules16.yaml  dnfs_gru_first_order_usage_1e3_rules4.yaml  dnfs_gru_first_order_usage_1e4.yaml  dnfs_gru_first_order_usage_3e3.yaml  dnfs_gru_first_order_usage_3e4.yaml  dnfs_gru_mlp.yaml  dnfs_gru_zero_order.yaml  dnfs_rules16_batch.yaml  dnfs_rules4_batch.yaml  dnfs_usage_0_batch.yaml  dnfs_usage_1e3_batch.yaml  dnfs_usage_1e4_batch.yaml  dnfs_usage_3e3_batch.yaml  (+1 more)
scripts/: analyze_dnfs_ablation.py
tests/: test_batch.py  test_benchmark_queue.py  test_comparison.py  test_data_pipeline.py  test_dnfs.py  test_download_presets.py  test_downloader.py  test_experiment.py  test_indicators.py  test_metrics.py  test_models.py  test_plotting.py  test_recursive_forecasting.py  test_sweep.py  test_tuning.py  test_walk_forward.py
(+294 files in other folders)
